# MoosicBoxApp

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  README.md  astro.config.mjs  copy-files.sh  package-lock.json  package.json  pnpm-lock.yaml  public  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: auto-upgrade-dependencies.yml  auto-upgrade-incompatible-dependencies.yml  auto-upgrade-node-dependencies.yml  build-and-test-ui.yml  build-and-test.yml  create-master-release.yml  create-nightly-release.yml  create-prerelease.yml  create-release.yml  prepare-release.yml
src/: config.ts  entry-client.tsx  entry-server.tsx  root.tsx  startup.ts  symphonia-player.ts  ws.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mdns.rs
src/app-components/DownloadSettings/: DownloadSettings.tsx
src/app-components/pages/music/: music-page.tsx
src/app-components/pages/profile/: profile-page.tsx
src/app-components/pages/server/: server-page.tsx
src/app-pages/setup/: hello.astro  music.astro
tauri-plugin-player/: Cargo.toml
tauri-plugin-player/android/src/main/java/: Player.kt  PlayerPlugin.kt
tauri-plugin-player/src/: desktop.rs  mobile.rs  models.rs
