[workspace]
members = [
    "packages/bundled",
    "packages/client",
    "packages/create_config",
    "packages/ws",
    "src-tauri",
    "tauri-plugin-player",
]

resolver = "2"

[workspace.metadata.cargo-udeps.ignore]
normal = ["log", "moosicbox_assert", "moosicbox_env_utils"]

[workspace.metadata.cargo-machete]
ignored = ["log", "moosicbox_assert", "moosicbox_env_utils"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.83"
async_once = "0.2.6"
atomic_float = "1.1.0"
bytes = "1.7.2"
clap = { version = "4.5.18", features = ["derive"] }
console-subscriber = "0.4.0"
debounce = "0.2.2"
flume = "0.11.0"
futures = "0.3"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
jni = "0.21.1"
kanal = "0.1.0-pre8"
lazy_static = "1.5.0"
log = "0.4.22"
ndk-context = "0.1.1"
rand = "0.8"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"
tauri = { version = "2.0.0-rc.15", features = ["protocol-asset"] }
tauri-build = { version = "2.0.0-rc.12", features = [] }
tauri-plugin = { version = "2.0.0-rc.12", features = ["build"] }
tauri-plugin-dialog = "2.0.0-rc.7"
tauri-plugin-notification = "2.0.0-rc.5"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["io-util", "sync", "tracing"] }
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-webpki-roots",
] }
tokio-util = "0.7.12"
