[package]
authors     = ["Braden Steffaniak"]
description = "MoosicBox Tauri App"
edition     = "2021"
license     = ""
name        = "moosicbox_app"
repository  = "https://github.com/MoosicBox/MoosicBoxApp"
version     = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "moosicbox_lib"

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
moosicbox_config = { path = "../../MoosicBoxServer/packages/config", default-features = false }
moosicbox_core = { path = "../../MoosicBoxServer/packages/core", default-features = false }
moosicbox_logging = { path = "../../MoosicBoxServer/packages/logging", default-features = false }
moosicbox_player = { path = "../../MoosicBoxServer/packages/player", default-features = false, features = [
    "local",
] }
moosicbox_session = { path = "../../MoosicBoxServer/packages/session", default-features = false }

async_once = "0.2.6"
atomic_float = "1.0.0"
debounce = "0.2.2"
jni = { version = "0.21.1", optional = true }
lazy_static = "1.5.0"
log = "0.4.22"
ndk-context = { version = "0.1.1", optional = true }
once_cell = { version = "1.19.0" }
portpicker = "0.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
console-subscriber = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tauri = { version = "2.0.0-beta.24", features = ["protocol-asset"] }

[features]
default = ["cpal"]

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

android = ["dep:jni", "dep:ndk-context"]

# Player audio outputs
asio                = ["moosicbox_player/asio"]
cpal                = ["moosicbox_player/cpal", "moosicbox_player/oboe-shared-stdcxx"]
jack                = ["moosicbox_player/jack"]
pulseaudio          = ["moosicbox_player/pulseaudio"]
pulseaudio-simple   = ["moosicbox_player/pulseaudio-simple"]
pulseaudio-standard = ["moosicbox_player/pulseaudio-standard"]
