[package]
authors     = ["Braden Steffaniak"]
description = "MoosicBox Tauri App"
edition     = "2021"
license     = ""
name        = "moosicbox_app"
repository  = "https://github.com/MoosicBox/MoosicBoxApp"
version     = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "moosicbox_lib"

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
moosicbox_audio_output = { path = "../../MoosicBoxServer/packages/audio_output", default-features = false }
moosicbox_config = { path = "../../MoosicBoxServer/packages/config", default-features = false }
moosicbox_core = { path = "../../MoosicBoxServer/packages/core", default-features = false }
moosicbox_logging = { path = "../../MoosicBoxServer/packages/logging", default-features = false }
moosicbox_player = { path = "../../MoosicBoxServer/packages/player", default-features = false, features = [
    "local",
] }
moosicbox_session = { path = "../../MoosicBoxServer/packages/session", default-features = false }
moosicbox_task = { path = "../../MoosicBoxServer/packages/task", default-features = false }

async_once = { workspace = true }
atomic_float = { workspace = true }
console-subscriber = { workspace = true }
debounce = { workspace = true }
jni = { workspace = true, optional = true }
lazy_static = { workspace = true }
log = { workspace = true }
ndk-context = { workspace = true, optional = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tauri = { workspace = true, features = ["protocol-asset"] }
thiserror = { workspace = true }

[features]
default = ["aac", "flac", "mp3", "pulseaudio-simple"]

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

android = ["dep:jni", "dep:ndk-context"]

# Player audio outputs
asio                = ["moosicbox_player/asio"]
cpal                = ["moosicbox_player/cpal", "moosicbox_player/oboe-shared-stdcxx"]
jack                = ["moosicbox_player/jack"]
pulseaudio          = ["moosicbox_player/pulseaudio"]
pulseaudio-simple   = ["moosicbox_player/pulseaudio-simple"]
pulseaudio-standard = ["moosicbox_player/pulseaudio-standard"]

aac  = ["moosicbox_core/aac"]
flac = ["moosicbox_core/flac"]
mp3  = ["moosicbox_core/mp3"]

aptabase = []
